--- a/Solitaire/pom.xml
+++ b/Solitaire/pom.xml
@@ -22,6 +22,13 @@
             <artifactId>javafx-controls</artifactId>
             <version>12.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.15.1
+            </version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -83,6 +90,14 @@
                     <target>1.8</target>
                 </configuration>
                 <version>2.5</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>  
+                <configuration>
+                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+                </configuration>              
+                <version>2.10.3</version>
             </plugin>
             <plugin>
                 <groupId>org.openjfx</groupId>
